@@ -1,3 +1,8 @@
+2011-02-07  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	* src/CMakeLists.txt: Removed some testing stuff that
+	accidently was comitted.
+
 2011-02-05  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	* src/gsad.c (gsad_init, main): Replace GSA_STATE_DIR by GSA_DATA_DIR.
